<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pop.mobile.PopComMainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/friends_pending_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/friends_pending_list" />

    <ListView
        android:id="@+id/friends_pending_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/friends_pending_button_refuse"
        android:layout_below="@+id/friends_pending_list_title" />

    <Button
        android:id="@+id/friends_pending_button_refuse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/refuse" />

    <Button
        android:id="@+id/friends_pending_button_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friends_pending_button_refuse"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/accept" />

</RelativeLayout>